--- a/.github/workflows/owasp-zap-scan.yml
+++ b/.github/workflows/owasp-zap-scan.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           ref: main
       - name: ZAP Scan
-        uses: zaproxy/action-full-scan@v0.4.0
+        uses: zaproxy/action-baseline@0.6.1
         with:
           docker_name: 'owasp/zap2docker-stable'
           target: 'https://www.zaproxy.org/'
